[gd_scene load_steps=4 format=3 uid="uid://c5vkmfj3r4dpb"]

[ext_resource type="Script" path="res://Entities/Environment/switches/light_switch.gd" id="1_rx8c2"]
[ext_resource type="AudioStream" uid="uid://ditqh6y1ovspx" path="res://audio/sfx/placeholder/button_press.wav" id="2_plt87"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g4pe6"]
size = Vector2(62, 33)

[node name="Switch" type="Area2D" node_paths=PackedStringArray("linked_nodes")]
script = ExtResource("1_rx8c2")
linked_nodes = [null]

[node name="Polygon2D" type="Polygon2D" parent="."]
rotation = -0.785398
color = Color(1, 0.101961, 0.270588, 1)
polygon = PackedVector2Array(2, 0, 2, -16, 5, -20, 5, -25, 2, -27, -3, -27, -5, -24, -5, -20, -2, -16, -2, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -16.5)
shape = SubResource("RectangleShape2D_g4pe6")

[node name="Label" type="Label" parent="."]
offset_left = -9.0
offset_top = -46.0
offset_right = 9.0
offset_bottom = -20.0
text = "F"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="ClickNoise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_plt87")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
